# RppPrototype

./: .gitignore  README.md  build.ps1  build.sh  main.py  pyproject.toml
data/: area.osm
docs/: directed_rpp_implementation.md  rpp_optional_endpoint.md  rpp_start_point_requirement.md
rpp/: filters.py  gpx_export.py  graph_loader.py  required_edges.py  rpp_solver.py  visualization.py
tests/: test_gpx_export.py  test_rpp_solver.py
