[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rpp-solver"
version = "0.1.0"
description = "Rural Postman Problem (RPP) solver on OSM data"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache 2.0" }
dependencies = [
  "osmnx",
  "networkx",
  "gpxpy",
]

[project.scripts]
rpp-solver = "main:main"

[project.optional-dependencies]
build = ["pyinstaller"]

[tool.setuptools.packages.find]
include = ["rpp"]
